--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site wide configuration
 
-title: Site Title
+title: JSFTOOLS - JSF Programming Tools
 locale: en_US
-description: Describe your website here.
+description: Library and tools to make JSF Programming easy.
 logo: site-logo.png
 search: true
 url: http://localhost:4000
@@ -31,13 +31,13 @@ exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.
 
 # Site owner
 owner:
-  name: Your Name
+  name: Bala Raman
   avatar: bio-photo.jpg
-  email: you@email.com
+  email: srbala@gmail.com
   disqus-shortname:
   twitter: #username
   facebook: #username
-  github: #username
+  github: srbala
   stackexchange: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
