--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "so-simple-theme",
-  "author": "Michael Rose <michael@mademistakes.com>",
-  "homepage": "http://mmistakes.github.io/so-simple-theme/",
+  "name": "jsftools-notes",
+  "author": "Bala Raman <srbala@gmail.com>",
+  "homepage": "http://jsftools.github.io/notes/",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mmistakes/so-simple-theme.git"
+    "url": "git://github.com/jsftools/notes.git"
   },
   "bugs": {
-    "url": "https://github.com/mmistakes/so-simple-theme/issues"
+    "url": "https://github.com/jsftools/notes/issues"
   },
   "engines": {
     "node": ">= 0.10.0"
